--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@
 @tailwind utilities;
 
 @layer base {
+  html, body, #root {
+    height: 100%;
+  }
+
   html {
     scroll-behavior: smooth;
-    
   }
 }
